--- a/src/app/services/service-info/service-info.component.html
+++ b/src/app/services/service-info/service-info.component.html
@@ -183,7 +183,7 @@
               <figure>
                 <img src="assets/img/goal.png" alt="" class="img-fluid">
               </figure>
-              <button type="button" class="btn mb-md-0 mb-2 btn-primary" [routerLink]="['/SellMainComponent']"> Manage your CRM</button>
+              <button type="button" class="btn mb-md-0 mb-2 btn-primary" [routerLink]="['/MainCRMComponent']"> Manage your CRM</button>
 
             </div>
             <div class="tab-pane" id="tab-2" role="tabpanel">
