--- a/src/app/partnership/main-partnershipType/partnershipType-main.component.html
+++ b/src/app/partnership/main-partnershipType/partnershipType-main.component.html
@@ -1,10 +1,8 @@
 <!-- ======= Top Bar ======= -->
-<app-top-bar></app-top-bar>
+<app-to-top></app-to-top>
 
 <!-- ======= Header ======= -->
-<app-header>
-
-</app-header>
+<app-header></app-header>
   
     <main id="main" class="">
   
@@ -13,22 +11,24 @@
         <div class="container">
   
           <div class="d-flex justify-content-between align-items-center">
-            <h2>Ads</h2>
+            <h2>Services</h2>
             <ol>
               <li><a href="index.html">Home</a></li>
-              <li>Ads</li>
+              <li>Services</li>
             </ol>
           </div>
   
         </div>
-      </section><!-- End Breadcrumbs -->
-  
-   
+      </section>
+            <!-- ======= Sell Types ======= -->
+
+        <app-partnershipType></app-partnershipType>
+     
   
       <!-- ======= Features Section ======= -->
-      <app-portfolio></app-portfolio>
     
     </main><!-- End #main -->
   <!-- ======= Footer ======= -->
+<app-footer></app-footer>
 <!-- top button -->
 <app-to-top></app-to-top>
