--- a/src/app/partnership/partnershipType/partnershiptype.component.html
+++ b/src/app/partnership/partnershipType/partnershiptype.component.html
@@ -20,62 +20,62 @@
           <div class="icon"><i class="bi bi-union"></i>
           </div>
           <h4 class="title">
-            <a [routerLink]="['/MainAdsComponent']"  (click)="savetypeHouse()">Merge</a></h4>
+            <a [routerLink]="['/MainEntrepriseListComponent']"  (click)="savetypeHouse()">Merge</a></h4>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
           <div class="icon"><i class="bi bi-box-arrow-in-up-left"></i></div>
-          <h4 class="title"><a [routerLink]="['/MainAdsComponent']" href="" (click)="savetypeGround() ">Acquisition</a></h4>
+          <h4 class="title"><a [routerLink]="['/MainEntrepriseListComponent']" href="" (click)="savetypeGround() ">Acquisition</a></h4>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
           <div class="icon"><i class="bi bi-bar-chart-steps"></i></div>
-          <h4 class="title"><a [routerLink]="['/MainAdsComponent']" href="" (click)="savetypeParking()">Strategic partnership</a></h4>
+          <h4 class="title"><a [routerLink]="['/MainEntrepriseListComponent']" href="" (click)="savetypeParking()">Strategic partnership</a></h4>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
           <div class="icon"><i class="bi bi-building-lock"></i></div>
-          <h4 class="title"><a [routerLink]="['/MainAdsComponent']" href="" (click)="savetypeCommercial()">Join venture</a></h4>
+          <h4 class="title"><a [routerLink]="['/MainEntrepriseListComponent']" href="" (click)="savetypeCommercial()">Join venture</a></h4>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
           <div class="icon"><i class="bi bi-person-workspace"></i></div>
-          <h4 class="title"><a [routerLink]="['/MainAdsComponent']" href="" (click)="savetypeOffice()">Business aliance</a></h4>
+          <h4 class="title"><a [routerLink]="['/MainEntrepriseListComponent']" href="" (click)="savetypeOffice()">Business aliance</a></h4>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
           <div class="icon"><i class="bi bi-ui-checks-grid"></i></div>
-          <h4 class="title"><a [routerLink]="['/MainAdsComponent']" href="" (click)="savetypeBuilding()">Distribution Agreement</a></h4>
+          <h4 class="title"><a [routerLink]="['/MainEntrepriseListComponent']" href="" (click)="savetypeBuilding()">Distribution Agreement</a></h4>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
           <div class="icon"><i class="bi bi-file-check-fill"></i></div>
-          <h4 class="title"><a [routerLink]="['/MainAdsComponent']" href="" (click)="savetypeBuilding()">Licensing Agreements</a></h4>
+          <h4 class="title"><a [routerLink]="['/MainEntrepriseListComponent']" href="" (click)="savetypeBuilding()">Licensing Agreements</a></h4>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
           <div class="icon"><i class="bi bi-arrows-collapse"></i></div>
-          <h4 class="title"><a [routerLink]="['/MainAdsComponent']" href="" (click)="savetypeBuilding()">Co-Development Agreements</a></h4>
+          <h4 class="title"><a [routerLink]="['/MainEntrepriseListComponent']" href="" (click)="savetypeBuilding()">Co-Development Agreements</a></h4>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
           <div class="icon"><i class="bi bi-cpu-fill"></i></div>
-          <h4 class="title"><a [routerLink]="['/MainAdsComponent']" href="" (click)="savetypeBuilding()">Technology Partnership</a></h4>
+          <h4 class="title"><a [routerLink]="['/MainEntrepriseListComponent']" href="" (click)="savetypeBuilding()">Technology Partnership</a></h4>
         </div>
       </div>
     </div>
     <div class="col-lg-4 col-md-6">
       <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
         <div class="icon"><i class="bi bi-box-seam"></i></div>
-        <h4 class="title"><a [routerLink]="['/MainAdsComponent']" href="" (click)="savetypeBuilding()">Joint Product Development Agreements</a></h4>
+        <h4 class="title"><a [routerLink]="['/MainEntrepriseListComponent']" href="" (click)="savetypeBuilding()">Joint Product Development Agreements</a></h4>
       </div>
     </div>
   
