--- a/src/app/EntrepriseList/main-entrepriseList/main-entrepriseList.component.html
+++ b/src/app/EntrepriseList/main-entrepriseList/main-entrepriseList.component.html
@@ -2,7 +2,9 @@
 <app-top-bar></app-top-bar>
 
 <!-- ======= Header ======= -->
-<app-header></app-header>
+<app-header>
+
+</app-header>
   
     <main id="main" class="">
   
@@ -11,24 +13,22 @@
         <div class="container">
   
           <div class="d-flex justify-content-between align-items-center">
-            <h2>Services</h2>
+            <h2>Ads</h2>
             <ol>
               <li><a href="index.html">Home</a></li>
-              <li>Services</li>
+              <li>Ads</li>
             </ol>
           </div>
   
         </div>
-      </section>
-            <!-- ======= Sell Types ======= -->
-
-        <app-selltype></app-selltype>
-     
+      </section><!-- End Breadcrumbs -->
+  
+   
   
       <!-- ======= Features Section ======= -->
+      <entreprise-list-affiche></entreprise-list-affiche>
     
     </main><!-- End #main -->
   <!-- ======= Footer ======= -->
-<app-footer></app-footer>
 <!-- top button -->
 <app-to-top></app-to-top>
