--- a/src/app/BackOffice/dashboard-main/dashboard-main.component.html
+++ b/src/app/BackOffice/dashboard-main/dashboard-main.component.html
@@ -3,8 +3,48 @@
     <app-dashboard-header></app-dashboard-header>
   
     <!-- ======= Sidebar ======= -->
-    <app-dashboard-side-bar></app-dashboard-side-bar>
+    <aside id="sidebar" class="sidebar">
   
+        <ul class="sidebar-nav" id="sidebar-nav">
+          <li class="nav-item">
+            <a class="nav-link " [routerLink]="['/DashboardMainComponent']">
+              <i class="bi bi-grid"></i>
+              <span>Dashboard</span>
+            </a>
+          </li><!-- End Dashboard Nav -->
+             
+          <li class="nav-item">
+            <a class="nav-link collapsed" [routerLink]="['/DashboardMainComponent/MainDashboardProfilComponent',userIdFromStorage]">
+              <i class="bi bi-person"></i>
+              <span>Profile</span>
+            </a>
+          </li>
+
+    
+        
+    
+         
+    
+            <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#" aria-expanded="false" [routerLink]="['DatatableComponent']">
+              <i class="bi bi-layout-text-window-reverse"></i><span>Partnership</span>
+            </a>
+
+         
+            
+          
+           
+       
+    
+    
+          
+    
+    
+    
+    
+        </ul>
+    
+      </aside><!-- End Sidebar-->
+    
     <main id="main2" class="main2">
 
   
