--- a/src/app/BackOffice/dashboard-side-bar/dashboard-side-bar.component.html
+++ b/src/app/BackOffice/dashboard-side-bar/dashboard-side-bar.component.html
@@ -19,12 +19,10 @@
 
      
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#" aria-expanded="false" [routerLink]="['DatatableComponent']">
+        <button class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#" aria-expanded="false" [routerLink]="['DatatableComponent']">
           <i class="bi bi-layout-text-window-reverse"></i><span>Tables</span>
-        </a>
+        </button>
        
-      </li><!-- End Tables Nav -->
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#" aria-expanded="false" [routerLink]="['ContratComponent']">
           <i class="bi bi-journal-text"></i><span>Contract</span>
