--- a/src/app/partnershipForm/topicMessage/topicMessage.component.scss
+++ b/src/app/partnershipForm/topicMessage/topicMessage.component.scss
@@ -689,3 +689,16 @@ a
   
 
 }
+
+
+.btn.btn-primary {
+  padding: 1px 5px;
+  cursor: pointer;
+  border-width: 10px;
+  border-radius: 5px;
+  font-size: 21px;
+  font-weight: 500;
+  box-shadow: 0px 10px 20px -6px rgb(0 0 0 / 66%);
+  background: #6c74cd;
+  border: white;
+}
