--- a/src/app/auth/signin-form/signin-form.component.html
+++ b/src/app/auth/signin-form/signin-form.component.html
@@ -50,7 +50,7 @@
               <span class="d-block text-left  text-muted"> or sign in with</span>
               
               <div class="social-login">
-                <button type="button" class="btn mb-md-0 mb-2 btn-fb" (click)="loginWithFacebook()">
+                <button type="button" class="btn mb-md-0 mb-2 btn-fb" >
                     <i class="bi bi-facebook"></i>                          
                 </button>
                   <button type="button" class="btn mb-md-0 mb-2 btn-twitter">
