--- a/src/app/BackOffice/dashboard-side-bar/dashboard-side-bar.component.html
+++ b/src/app/BackOffice/dashboard-side-bar/dashboard-side-bar.component.html
@@ -17,8 +17,8 @@
 
       </li><!-- End Components Nav -->
 
-     
-
+      
+      
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#" aria-expanded="false" [routerLink]="['DatatableComponent']">
           <i class="bi bi-layout-text-window-reverse"></i><span>Tables</span>
@@ -50,25 +50,33 @@
       </li><!-- End Profile Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-faq.html">
+        <a class="nav-link collapsed" href="faq">
           <i class="bi bi-question-circle"></i>
           <span>F.A.Q</span>
         </a>
       </li><!-- End F.A.Q Page Nav -->
+      
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-contact.html">
+   
+      <li class="nav-item dropdown" class="nav-item" (click)="toggleReclamationDropdown()">
+        <a class="nav-link" class="nav-link collapsed" [class.active]="reclamationDropdownOpen">
           <i class="bi bi-envelope"></i>
-          <span>Contact</span>
+          <span>Reclamation</span>
         </a>
-      </li><!-- End Contact Page Nav -->
+        <ul class="dropdown-menu" class="nav-item" [class.show]="reclamationDropdownOpen">
+          <li><a class="dropdown-item" class="nav-link collapsed" href="reclamation">Envoyer reclamation</a></li>
+          <li><a class="dropdown-item" class="nav-link collapsed" href="list-reclamation">Mes réclamations</a></li>
+        </ul>
+      </li>
+      
+      <li class="nav-item" > 
+        <a class="nav-link collapsed" href="pages-register.html"> 
+          <i class="bi bi-card-list"></i> 
+          <span>Register</span> 
+        </a> 
+      </li>
+      
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-register.html">
-          <i class="bi bi-card-list"></i>
-          <span>Register</span>
-        </a>
-      </li><!-- End Register Page Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" href="pages-login.html">
@@ -94,3 +102,4 @@
     </ul>
 
   </aside><!-- End Sidebar-->
+  
