--- a/src/app/gestion-reclamation/gestion-reclamation.component.html
+++ b/src/app/gestion-reclamation/gestion-reclamation.component.html
@@ -1,4 +1,15 @@
 
+<app-dashboard-header></app-dashboard-header>
+  
+<!-- ======= Sidebar ======= -->
+
+<app-dashboard-side-bar *ngIf="userId !== 3"></app-dashboard-side-bar>
+<app-side-bar *ngIf="userId == 3"></app-side-bar>
+
+
+
+<!-- app.component.html -->
+<br><br><br>
 
 <main id="main2" class="main2">
 
